docs/scenarios/kubernetes-dashboard/resources/v06-storage.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qe-v06-workflows
