docs/scenarios/kubernetes-dashboard/resources/access-control.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: test-endpointslice
  namespace: default
  labels:
    kubernetes.io/service-name: svc1-clusterip
addressType: IPv4
ports:
  - name: http
    port: 8080
    protocol: TCP
endpoints:
  - addresses:
      - 10.0.0.1
    conditions:
      ready: true
