docs/scenarios/kubernetes-dashboard/resources/v06-config-webhooks.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: qe-v06-mutating-webhook
webhooks:
  - name: mutate.qe-v06.example.com
    admissionReviewVersions: ["v1"]
    sideEffects: None
    failurePolicy: Ignore
    namespaceSelector:
      matchLabels:
        kubernetes.io/metadata.name: default
    clientConfig:
      url: https://example.com/mutate
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["pods"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: qe-v06-validating-webhook
webhooks:
  - name: validate.qe-v06.example.com
    admissionReviewVersions: ["v1"]
    sideEffects: None
    failurePolicy: Ignore
    namespaceSelector:
      matchLabels:
        kubernetes.io/metadata.name: default
    clientConfig:
      url: https://example.com/validate
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["pods"]
